<resources>
    <string name="app_name">YoutubeApi</string>
    <string name="not_connection_message">Нет интернет соединения</string>
    <string name="playlist">playlist</string>
    <string name="back">Back</string>
    <string name="media_url_mp3">media</string>
    <string name="select_video_quality">Select video quality</string>
    <string name="_1080p">1080p</string>
    <string name="_720p">720p</string>
    <string name="_480p">480p</string>
    <string name="download">Download</string>
</resources>