<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_video_quality"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/button_1080p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/_1080p"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/button_720dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_720p"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/button_480p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_480p"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="4dp"
        android:backgroundTint="@color/red"
        android:layout_marginTop="20dp"
        android:text="@string/download"
        android:textSize="@dimen/textsize"
        android:textAllCaps="false"/>

</LinearLayout>